--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "vue": "^3.0.0-0",
+    "vue-axios": "^3.0.1",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
