--- a/nginx.conf
+++ b/nginx.conf
@@ -18,6 +18,8 @@ server {
     client_max_body_size 10M;
 
     location /api/ {
+        proxy_set_header Host receipt.modalstudio.com;
+        proxy_set_header X-Forwarded-For $remote_addr;
         proxy_pass http://backend:8080/;
     }
 
