--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.20.0",
     "vue": "^3.0.0-0",
     "vue-axios": "^3.0.1",
+    "vue-plugin-load-script": "^2.0.1",
     "vue-router": "^4.0.0-0",
     "yargs": "^16.0.3"
   },
