--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "vue-cli-service serve",
     "serve-proxy": "vue-cli-service serve --proxy=true",
     "serve-poll": "vue-cli-service serve --poll=true",
+    "serve-production": "vue-cli-service serve --mode production",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
