--- a/package.json
+++ b/package.json
@@ -13,29 +13,34 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
-    "vue": "^3.0.0-0",
-    "vue-axios": "^3.0.1",
+    "core-js": "^3.6.5",
+    "vue": "^3.0.2",
+    "vue-axios": "^3.2.0",
     "vue-plugin-load-script": "^2.0.1",
-    "vue-router": "^4.0.0-0",
-    "yargs": "^16.0.3"
+    "vue-router": "^4.0.0-rc.5",
+    "yargs": "^16.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-unit-mocha": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0-0",
+    "@vue/cli-plugin-babel": "^4.5.9",
+    "@vue/cli-plugin-eslint": "^4.5.9",
+    "@vue/cli-plugin-router": "^4.5.9",
+    "@vue/cli-plugin-unit-jest": "^4.5.9",
+    "@vue/cli-service": "^4.5.9",
+    "@vue/compiler-sfc": "^3.0.2",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/server-renderer": "^3.0.2",
-    "@vue/test-utils": "^2.0.0-0",
-    "chai": "^4.2.0",
+    "@vue/server-test-utils": "^1.1.1",
+    "@vue/test-utils": "^2.0.0-beta.10",
+    "babel-eslint": "^10.1.0",
+    "chai": "^4.1.2",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-vue": "^7.0.0-0",
-    "mocha": "^8.2.1",
+    "eslint-plugin-vue": "^7.1.0",
     "prettier": "^1.19.1",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2"
+    "sass": "^1.29.0",
+    "sass-loader": "^8.0.2",
+    "typescript": "~3.9.3",
+    "vue-jest": "^5.0.0-alpha.6"
   },
   "eslintConfig": {
     "root": true,
@@ -48,7 +53,7 @@
       "@vue/prettier"
     ],
     "parserOptions": {
-      "ecmaVersion": 2020
+      "parser": "babel-eslint"
     },
     "rules": {},
     "overrides": [
@@ -58,7 +63,7 @@
           "**/tests/unit/**/*.spec.{j,t}s?(x)"
         ],
         "env": {
-          "mocha": true
+          "jest": true
         }
       }
     ]
