--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
+    "vee-validate": "^4.1.1",
     "vue": "^3.0.2",
     "vue-axios": "^3.2.0",
     "vue-plugin-load-script": "^2.0.1",
     "vue-router": "^4.0.0-rc.5",
-    "yargs": "^16.1.1"
+    "yargs": "^16.1.1",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.9",
