--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "mitt": "^2.1.0",
     "vee-validate": "^4.1.1",
     "vue": "^3.0.2",
     "vue-axios": "^3.2.0",
